<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/show_blocks"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="View Blocks"/>
</FrameLayout>