package test.blockonetest;


import android.support.test.espresso.DataInteraction;
import android.support.test.espresso.ViewInteraction;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import static android.support.test.InstrumentationRegistry.getInstrumentation;
import static android.support.test.espresso.Espresso.onData;
import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.Espresso.pressBack;
import static android.support.test.espresso.Espresso.openActionBarOverflowOrOptionsMenu;
import static android.support.test.espresso.action.ViewActions.*;
import static android.support.test.espresso.assertion.ViewAssertions.*;
import static android.support.test.espresso.matcher.ViewMatchers.*;

import test.blockonetest.R;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.hamcrest.core.IsInstanceOf;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.anything;
import static org.hamcrest.Matchers.is;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class MainActivityTest2 {

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Test
    public void mainActivityTest2() {
        ViewInteraction button = onView(
allOf(withId(R.id.show_blocks),
childAtPosition(
childAtPosition(
withId(R.id.content),
0),
0),
isDisplayed()));
        button.check(matches(isDisplayed()));

        ViewInteraction button2 = onView(
allOf(withId(R.id.show_blocks),
childAtPosition(
childAtPosition(
withId(R.id.content),
0),
0),
isDisplayed()));
        button2.check(matches(isDisplayed()));

        ViewInteraction appCompatButton = onView(
allOf(withId(R.id.show_blocks),
childAtPosition(
childAtPosition(
withId(R.id.content),
0),
0),
isDisplayed()));
        appCompatButton.perform(click());

        ViewInteraction listView = onView(
allOf(withId(R.id.list_view),
childAtPosition(
childAtPosition(
withId(R.id.content),
0),
0),
isDisplayed()));
        listView.check(matches(isDisplayed()));

        ViewInteraction textView = onView(
allOf(withId(android.R.id.text1),
childAtPosition(
allOf(withId(R.id.list_view),
childAtPosition(
IsInstanceOf.<View>instanceOf(android.widget.FrameLayout.class),
0)),
0),
isDisplayed()));
        textView.check(matches(isDisplayed()));

        DataInteraction appCompatTextView = onData(anything())
.inAdapterView(allOf(withId(R.id.list_view),
childAtPosition(
withClassName(is("android.widget.FrameLayout")),
0)))
.atPosition(1);
        appCompatTextView.perform(click());

        ViewInteraction textView2 = onView(
allOf(
childAtPosition(
allOf(withId(R.id.text_area),
childAtPosition(
IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
0)),
0),
isDisplayed()));
        textView2.check(matches(isDisplayed()));

        ViewInteraction textView3 = onView(
allOf(
childAtPosition(
allOf(withId(R.id.text_area),
childAtPosition(
IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
0)),
1),
isDisplayed()));
        textView3.check(matches(isDisplayed()));

        ViewInteraction textView4 = onView(
allOf(
childAtPosition(
allOf(withId(R.id.text_area),
childAtPosition(
IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
0)),
2),
isDisplayed()));
        textView4.check(matches(isDisplayed()));

        ViewInteraction button3 = onView(
allOf(withId(R.id.show_raw_content),
childAtPosition(
childAtPosition(
IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
1),
0),
isDisplayed()));
        button3.check(matches(isDisplayed()));

        ViewInteraction appCompatButton2 = onView(
allOf(withId(R.id.show_raw_content),
childAtPosition(
childAtPosition(
withClassName(is("android.widget.LinearLayout")),
1),
0),
isDisplayed()));
        appCompatButton2.perform(click());

        ViewInteraction appCompatButton3 = onView(
allOf(withId(R.id.show_raw_content), withText("Hide Raw Content"),
childAtPosition(
childAtPosition(
withClassName(is("android.widget.LinearLayout")),
1),
0),
isDisplayed()));
        appCompatButton3.perform(click());

        ViewInteraction appCompatButton4 = onView(
allOf(withId(R.id.show_raw_content), withText("Show Raw Content"),
childAtPosition(
childAtPosition(
withClassName(is("android.widget.LinearLayout")),
1),
0),
isDisplayed()));
        appCompatButton4.perform(click());

        ViewInteraction appCompatButton5 = onView(
allOf(withId(R.id.show_raw_content), withText("Hide Raw Content"),
childAtPosition(
childAtPosition(
withClassName(is("android.widget.LinearLayout")),
1),
0),
isDisplayed()));
        appCompatButton5.perform(click());

        ViewInteraction appCompatButton6 = onView(
allOf(withId(R.id.show_raw_content), withText("Show Raw Content"),
childAtPosition(
childAtPosition(
withClassName(is("android.widget.LinearLayout")),
1),
0),
isDisplayed()));
        appCompatButton6.perform(click());

        }

        private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup)parent).getChildAt(position));
            }
        };
    }
    }
